# sc-kura

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  supervisor.py
backend/: celerydev.sh  pyproject.toml
backend/app/: celery.py  emails.py  main.py  models.py  tasks.py
backend/app/api/: file_services.py  main.py
backend/app/api/routes/: auth.py  celery.py  login.py  storage.py  users.py
backend/app/core/: config.py  database.py  database_sync.py  security.py
backend/app/crud/: auth.py  storage.py
backend/app/email_templates/src/: new_account.mjml  (+1 more)
backend/app/models/: storage.py  users.py
backend/app/schemas/: storage.py  uitls.py  users.py  utils.py
backend/app/services/: storage.py
backend/migrations/: env.py
backend/migrations/versions/: 064f03038a3c_store_original_folder_in_folders_for_.py  26c68b3a674c_store_original_folder_in_files_for_.py  28660918b76a_user_table_creation.py  38caea246d15_user_id_in_folder_could_be_null_due_to_.py  3b04f3e92d45_folder_and_file_size_type_changed_to_.py  40d7c68f831c_parent_id_folder_ondelete_cascade.py  5d0217eef010_status_field_added_to_folder_table.py  5f2922100573_file_table_creation.py  741c0ab8ca06_folder_table_creation.py  931b4ac4cfad_store_original_folder_in_folders_for_.py  a0f7be18eec7_store_original_folder_in_folders_for_.py  be0edbfe6707_metadata_tables_creation.py  c40056d4e75e_adding_self_referencing_folder.py  ce975e8b8ad1_parent_id_folder_ondelete_cascade.py  d6f1ae2ac7a4_file_and_folder_table_creation.py  e832373507ac_folder_stored_name_could_be_null.py  ed085b3bd056_file_table_creation.py  fa24a4465652_deleted_path_added_to_folder_table.py
backend/tests/: test_health.py  test_routes.py
(+79 files in other folders)
