[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.1",
    "celery[redis]>=5.6.2",
    "fastapi>=0.128.0",
    "fastapi-mail>=1.6.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pre-commit>=4.5.1",
    "psycopg[binary]>=3.3.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]
